--- a/order.html
+++ b/order.html
@@ -10,7 +10,7 @@
   <h1>Order Page</h1>
   <div class="order-container">
     <ul id="order-items">
-      <!-- (Assignment: Display existing order items if available) -->
+      <!-- Show order items here -->
     </ul>
     <button id="finalize-order">Finalize Order</button>
   </div>
