--- a/view.html
+++ b/view.html
@@ -9,7 +9,7 @@
 <body>
   <h1>View Order</h1>
   <div class="container">
-    <!-- Cart section to display saved order -->
+    <!-- Cart  to display order items -->
     <div class="cart">
       <h2>Your Order</h2>
       <ul id="order-list"></ul>
